# sense-u-ble

./: .gitignore  LICENSE  README.md  config.example.json  pyproject.toml
examples/: consumer.py
sense_u_ble/: __init__.py  client.py  config.py  i18n.py  protocol.py  service.py  state.py
tools/: adv_scan.py  discover.py  pairing.py  scan.py
